--- a/jenkins.yml
+++ b/jenkins.yml
@@ -1,15 +1,18 @@
 ---
 - hosts: machines
   tasks:
+    #installing jdk, to run java applications
     - name: Install JDK
       apt: pkg=openjdk-8-jdk state=installed update_cache=true
       become: true
-
+    
+    #installing nginx, and then starting it
     - name: Install nginx
       apt: pkg=nginx state=installed
       notify:
         - Start Nginx
-
+    
+    #add private key, in order to download jenkins
     - name: Add key
       become: true
       apt_key:
@@ -17,11 +20,13 @@
         state: present
       register: keyadded
      
+    #adding jenkins repository to apt list
     - name: Add Repo
       become: true
       command: sh -c 'echo deb http://pkg.jenkins-ci.org/debian binary/ > /etc/apt/sources.list.d/jenkins.list'
       register: repoadded 
     
+    #finally install jenkins. forcing just in case
     - name: Install Jenkins
       when: keyadded|success and repoadded|success
       apt:
