--- a/docker.yml
+++ b/docker.yml
@@ -2,13 +2,43 @@
 - hosts: machines
   tasks:
     #task to install Docker on the servers
-    - name: Install Docker
+    - name: Install Docker on Debian based
       apt: pkg=docker.io state=installed update_cache=true
+      when: ansible_os_family == "Debian"
       notify:
         - Restart Docker
+   
+    #upgrading packages just in case
+    - name: Upgrade dnf packages
+      dnf:
+        name: "*"
+        state: latest
+      when: ansible_os_family == "RedHat"
+      become: true
+    
+    #installing Docker on RedHat based machines
+    - name: Install Docker on RedHat Based
+      dnf:
+        name: docker-io
+        state: latest
+      when: ansible_os_family == "RedHat"
+      become: true
+      notify:
+        - Start Docker
 
   handlers:
     #making possible to use docker without sudo command
     - name: Restart Docker
       shell: gpasswd -a ${USER} docker && service docker restart
+      become: true
+    
+    #starting docker on RedHat Based
+    - name: Start Docker
+      command: systemctl start docker
+      become: true
+      notify:
+        - Configure Systemclt
+    
+    - name: Configure Systemclt
+      command: systemctl enable docker
       become: true
