--- a/jenkins_slave.yml
+++ b/jenkins_slave.yml
@@ -32,6 +32,8 @@
         - python3
         - gcc
         - make
+        - vim
+        - htop
       when: ansible_os_family == "Debian"
 
     - name: Install extra packages on Red Hat based
@@ -42,4 +44,6 @@
         - python3
         - gcc
         - make
+        - vim
+        - htop
       when: ansible_os_family == "RedHat"
